# cpp-lox

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  test.geo  test.lum  test4.geo  test5.geo  vcpkg.json  version.txt
cmake/: git_version.cmake
cpp-lox/: CMakeLists.txt  main.cpp
cpp-lox/cmake/: logging.cmake
cpp-lox/include/: arena_memory_pool.h  console_io.h  cpplox_app.h  cpplox_types.h  debug_timer.h  environment.h  exceptions.h  expression_visitors.h  expressions.h  interpreter.h  lexer.h  logger.h  memory_manager.h  parser.h  resolver.h  statement_visitors.h  statements.h  tokens.h  typedefs.h
cpp-lox/src/: arena_memory_pool.cpp  console_io.cpp  cpplox_app.cpp  cpplox_types.cpp  debug_timer.cpp  environment.cpp  exceptions.cpp  expressions.cpp  interpreter.cpp  lexer.cpp  logger.cpp  memory_manager.cpp  parser.cpp  resolver.cpp  statements.cpp  tokens.cpp
geo/: CMakeLists.txt  main.cpp
geo/cmake/: logging.cmake
geo/include/: arena_memory_pool.h  console_io.h  debug_timer.h  environment.h  exceptions.h  expression_visitors.h  expressions.h  geo_app.h  geo_classes.h  geo_functions.h  geo_native_funcs.h  geo_types.h  i_logger.h  interpreter.h  lexer.h  logger.h  memory_manager.h  parser.h  resolver.h  statement_visitors.h  statements.h  tokens.h  typedefs.h
geo/src/: arena_memory_pool.cpp  console_io.cpp  debug_timer.cpp  environment.cpp  exceptions.cpp  expression_visitors.cpp  expressions.cpp  geo_app.cpp  geo_classes.cpp  geo_functions.cpp  geo_native_funcs.cpp  geo_types.cpp  interpreter.cpp  lexer.cpp  logger.cpp  memory_manager.cpp  parser.cpp  resolver.cpp  statements.cpp  tokens.cpp
lumina/: CMakeLists.txt  main.cpp
lumina/cmake/: logging.cmake
lumina/include/: application.h  console_io.h  environment.h  exceptions.h  expression_visitors.h  expressions.h  i_io.h  i_logger.h  interpreter.h  lexer.h  lexer_exceptions.h  logger.h  lumina_app.h  lumina_types.h  parser.h  parser_exceptions.h  statement_visitors.h  statements.h  tokens.h  typedefs.h
lumina/src/: application.cpp  console_io.cpp  environment.cpp  exceptions.cpp  expression_visitors.cpp  expressions.cpp  interpreter.cpp  lexer.cpp  lexer_exceptions.cpp  logger.cpp  lumina_app.cpp  lumina_types.cpp  parser.cpp  parser_exceptions.cpp  statement_visitors.cpp  statements.cpp  tokens.cpp
tests/: CMakeLists.txt  lexer_test_cases.h  lexer_tests.cpp  parser_tests.cpp  readme_tests.geo  test1.cpplox  test10.cpplox  test10.geo  test11.cpplox  test11.geo  test12.geo  test2.geo  test3.cpplox  test4.geo  test5.geo  test6.geo  test8.cpplox  test9.cpplox  test9.geo
